# todo-cli

./: .gitignore  README.md  notes
cli/: Cargo.toml
cli/src/: main.rs
