[package]
name = "cli"
version = "0.1.0"
authors = ["Robert McCarthy <remccarthy@sei.cmu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"